[package]
name = "yui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.11.5"
tokio = { version = "1.20.1", features = ["full"] }

[env]
DISCORD_TOKEN = { value = "TOKEN", relative = true } 
